tests/snapshots/examples_fixtures/aoc__2025__aoc_day12_refactored.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day12_refactored.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_refactored.flx:24:27
   |
24 |             if in_block { push(acc, cur_size) } else { acc }
   |                           ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day12_refactored.flx:68:42
   |
68 |         let counts   = parse_area_counts(slice(parts, 1, len(parts)))
   |                                          ^^^^^

Hint:
  Define it first: let slice = ...;

Help:
  Did you mean `line`?


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_refactored.flx:70:9
   |
70 |         push(acc, (safe_int(bounds, 0), safe_int(bounds, 1), counts)))
   |         ^^^^

Hint:
  Define it first: let push = ...;

Found 3 errors.
== stdout ==
<not executed>
